authentication for officer, sign up page for officer

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".SignUpActivity"
+            android:name=".SignUpActivityUser"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
