Violations Status changing and Code Generation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,6 +83,13 @@
                 android:value="" />
         </activity>
         <activity
+            android:name=".Fawry"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".SignInUserActivity"
             android:exported="false">
             <meta-data
